--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -54,7 +54,7 @@ body {
   
   .slider {
     background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+    /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%); */
     /* clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%); */
   }
   
@@ -75,7 +75,8 @@ body {
     width: 750px;
     height: 750px;
     border-radius: 50%;
-  
+    position: absolute;
+
   }
   
   .sliderTitle {
@@ -86,6 +87,11 @@ body {
     font-weight: 900;
     text-align: center;
     color: #fff;
+    z-index: 1;
+  }
+
+  .sliderImage {
+    z-index: 1;
   }
   
   .sliderPrice {
@@ -97,6 +103,59 @@ body {
     text-align: center;
     color: white;
     border: 1px solid gray;
+    z-index: 1;
+  }
+
+  .buyButton {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    font-size: 30px;
+    font-weight: 900;
+    color: white;
+    border: 1px solid gray;
+    z-index: 1;
+    cursor: pointer;
+    background-color: black;
+  }
+
+  .buyButton:hover {
+    background-color: white;
+    color: black;
+  }
+
+  /* For background color */
+  .sliderItem:nth-child(1) .sliderBg {
+    background-color: #55ADC6;
+  }
+  .sliderItem:nth-child(2) .sliderBg {
+    background-color: #55c684;
+  }
+  .sliderItem:nth-child(3) .sliderBg {
+    background-color: #b355c6;
+  }
+  .sliderItem:nth-child(4) .sliderBg {
+    background-color: #c6be55;
+  }
+  .sliderItem:nth-child(5) .sliderBg {
+    background-color: #c67555;
+  }
+
+  /* For text color */
+  .sliderItem:nth-child(1) .sliderPrice {
+    color: #55ADC6;
+  }
+  .sliderItem:nth-child(2) .sliderPrice {
+    color: #55c684;
+  }
+  .sliderItem:nth-child(3) .sliderPrice {
+    color: #b355c6;
+  }
+  .sliderItem:nth-child(4) .sliderPrice {
+    color: #c6be55;
+  }
+  .sliderItem:nth-child(5) .sliderPrice {
+    color: #c67555;
   }
   /* .lato-thin {
       font-family: "Lato", sans-serif;
