--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     padding: 0;
@@ -130,42 +134,42 @@ body {
 
   /* For background color */
   .sliderItem:nth-child(1) .sliderBg {
-    background-color: #55ADC6;
+    background-color: #baf0ff;
   }
   .sliderItem:nth-child(2) .sliderBg {
-    background-color: #55c684;
+    background-color: #bcf7d4;
   }
   .sliderItem:nth-child(3) .sliderBg {
-    background-color: #af55c6;
+    background-color: #e5b5f1;
   }
   .sliderItem:nth-child(4) .sliderBg {
-    background-color: #c6be55;
+    background-color: #fdf9c1;
   }
   .sliderItem:nth-child(5) .sliderBg {
-    background-color: #c67555;
+    background-color: #f7c1ac;
   }
   .sliderItem:nth-child(6) .sliderBg {
-    background-color: #c65597;
+    background-color: #f082c2;
   }
 
   /* For text color */
   .sliderItem:nth-child(1) .sliderPrice {
-    color: #55ADC6;
+    color: #baf0ff;
   }
   .sliderItem:nth-child(2) .sliderPrice {
-    color: #55c684;
+    color: #bcf7d4;
   }
   .sliderItem:nth-child(3) .sliderPrice {
-    color: #af55c6;
+    color: #e5b5f1;
   }
   .sliderItem:nth-child(4) .sliderPrice {
-    color: #c6be55;
+    color: #fdf9c1;
   }
   .sliderItem:nth-child(5) .sliderPrice {
-    color: #c67555;
+    color: #f7c1ac;
   }
   .sliderItem:nth-child(6) .sliderPrice {
-    color: #c65597;
+    color: #f082c2;
   }
 
   .features {
@@ -202,7 +206,7 @@ body {
 
   .product {
     height: 100vh;
-    background-color: whitesmoke;
+    background-color: rgb(252, 234, 234);
     position: relative;
     clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
   }
@@ -231,6 +235,7 @@ body {
 
   .colors, .sizes {
     display: flex;
+    margin-bottom: 20px;
   }
 
   .color {
@@ -238,7 +243,7 @@ body {
     height: 32px;
     border-radius: 5px;
     background-color: black;
-    margin-right: 10px;
+    margin: 0 10px;
     cursor: pointer;
   }
 
@@ -266,6 +271,10 @@ body {
   .productButton:hover {
     background-color: white;
     color: black;
+  }
+
+  .selected {
+    border: 2px solid #313538;
   }
   /* .lato-thin {
       font-family: "Lato", sans-serif;
