--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -3,338 +3,365 @@ html {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    padding: 0;
-    margin: 0;
-  }
-  
-  nav {
-    background-color: #111;
-    color: #fff;
-    padding: 20px 50px;
-  }
-  
-  .navTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .search {
-    display: flex;
-    align-items: center;
-    background-color: gray;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  
-  .searchInput {
-    border: none;
-    background-color: transparent;
-  }
-  
-  .searchInput::placeholder {
-    color: lightgray;
-  }
-  
-  .limitedOffer {
-    font-size: 20px;
-    border-bottom: 2px solid green;
-    cursor: pointer;
-  }
-  
-  .navBottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .menuItem {
-    margin-right: 20px;
-    cursor: pointer;
-    color: lightgray;
-    font-weight: 400;
-  }
-  
-  .slider {
-    background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
-    /* background: url('/src/assets/images/background.png'); */
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-    overflow: hidden;
-    /* clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%); */
-  }
-  
-  .sliderWrapper {
-    display: flex;
-    width: 600vw;
-    transition: all 1s ease-in-out;
-  }
-  
-  .sliderItem {
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-  
-  .sliderBg {
-    width: 750px;
-    height: 750px;
-    border-radius: 50%;
-    position: absolute;
+  font-family: 'Lato', sans-serif;
+  padding: 0;
+  margin: 0;
+}
 
-  }
-  
-  .sliderTitle {
-    text-transform: uppercase;
-    position: absolute;
-    top: 10%;
-    right: 10%;
-    font-size: 60px;
-    font-weight: 900;
-    text-align: center;
-    color: #fff;
-    z-index: 1;
-  }
+nav {
+  background-color: #111;
+  color: #fff;
+  padding: 20px 50px;
+}
 
-  .sliderImage {
-    z-index: 1;
-  }
-  
-  .sliderPrice {
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    font-size: 60px;
-    font-weight: 300;
-    text-align: center;
-    color: white;
-    border: 1px solid gray;
-    z-index: 1;
-  }
+.navTop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .buyButton {
-    position: absolute;
-    top: 50%;
-    right: 10%;
-    font-size: 30px;
-    font-weight: 900;
-    color: white;
-    border: 1px solid gray;
-    z-index: 1;
-    cursor: pointer;
-    background-color: black;
-  }
+.search {
+  display: flex;
+  align-items: center;
+  background-color: gray;
+  padding: 10px;
+  border-radius: 10px;
+}
 
-  .buyButton:hover {
-    background-color: white;
-    color: black;
-  }
+.searchInput {
+  border: none;
+  background-color: transparent;
+}
 
-  /* For background color */
-  .sliderItem:nth-child(1) .sliderBg {
-    background-color: #baf0ff;
-  }
-  .sliderItem:nth-child(2) .sliderBg {
-    background-color: #bcf7d4;
-  }
-  .sliderItem:nth-child(3) .sliderBg {
-    background-color: #f4c6ff;
-  }
-  .sliderItem:nth-child(4) .sliderBg {
-    background-color: #fdf9c1;
-  }
-  .sliderItem:nth-child(5) .sliderBg {
-    background-color: #f7c1ac;
-  }
-  .sliderItem:nth-child(6) .sliderBg {
-    background-color: #ffeece;
-  }
+.searchInput::placeholder {
+  color: lightgray;
+}
 
-  /* For text color */
-  .sliderItem:nth-child(1) .sliderPrice {
-    color: #baf0ff;
-  }
-  .sliderItem:nth-child(2) .sliderPrice {
-    color: #bcf7d4;
-  }
-  .sliderItem:nth-child(3) .sliderPrice {
-    color: #f4c6ff;
-  }
-  .sliderItem:nth-child(4) .sliderPrice {
-    color: #fdf9c1;
-  }
-  .sliderItem:nth-child(5) .sliderPrice {
-    color: #f7c1ac;
-  }
-  .sliderItem:nth-child(6) .sliderPrice {
-    color: #ffeece;
-  }
+.limitedOffer {
+  font-size: 20px;
+  border-bottom: 2px solid green;
+  cursor: pointer;
+}
 
-  .features {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 50px;
-  }
+.navBottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .feature {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+.menuItem {
+  margin-right: 20px;
+  cursor: pointer;
+  color: lightgray;
+  font-weight: 400;
+}
 
-  .featureIcon {
-    width: 50px;
-    height: 50px;
-  }
+.slider {
+  background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
+  /* background: url('/src/assets/images/background.png'); */
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+  overflow: hidden;
+  /* clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%); */
+}
 
-  .featureTitle {
-    font-size: 20px;
-    font-weight: 600;
-    margin: 20px;
-  }
+.sliderWrapper {
+  display: flex;
+  width: 600vw;
+  transition: all 1s ease-in-out;
+}
 
-  .featureDesc {
-    color: gray;
-    width: 75%;
-    height: 100px;
-    /* border: 1px solid red; */
-  }
+.sliderItem {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
 
-  .product {
-    height: 100vh;
-    background-color: rgb(252, 234, 234);
-    /* background-color: whitesmoke; */
-    position: relative;
-    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-  }
+.sliderBg {
+  width: 750px;
+  height: 750px;
+  border-radius: 50%;
+  position: absolute;
 
-  .productImg {
-    width: 50%;
-  }
+}
 
-  .productDetails {
-    position: absolute;
-    top: 10%;
-    right: 0;
-    width: 40%;
-    padding: 50px;
-  }
+.sliderTitle {
+  text-transform: uppercase;
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  font-size: 60px;
+  font-weight: 900;
+  text-align: center;
+  color: #fff;
+  z-index: 1;
+}
 
-  .productTitle {
-    font-size: 75px;
-    font-weight: 900;
-  }
+.sliderImage {
+  z-index: 1;
+}
 
-  .productDesc {
-    font-size: 24px;
-    color: gray;
-  }
+.sliderPrice {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  font-size: 60px;
+  font-weight: 300;
+  text-align: center;
+  color: white;
+  border: 1px solid gray;
+  z-index: 1;
+}
 
-  .colors, .sizes {
-    display: flex;
-    margin-bottom: 20px;
-  }
+.buyButton {
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  font-size: 30px;
+  font-weight: 900;
+  color: white;
+  border: 1px solid gray;
+  z-index: 1;
+  cursor: pointer;
+  background-color: black;
+}
 
-  .color {
-    width: 32px;
-    height: 32px;
-    border-radius: 5px;
-    background-color: black;
-    margin: 0 10px;
-    cursor: pointer;
-    border: 1px solid whitesmoke;
-  }
+.buyButton:hover {
+  background-color: white;
+  color: black;
+}
 
-  .color:last-child {
-    background-color: #1b2843;
-  }
+/* For background color */
+.sliderItem:nth-child(1) .sliderBg {
+  background-color: #baf0ff;
+}
+.sliderItem:nth-child(2) .sliderBg {
+  background-color: #bcf7d4;
+}
+.sliderItem:nth-child(3) .sliderBg {
+  background-color: #f4c6ff;
+}
+.sliderItem:nth-child(4) .sliderBg {
+  background-color: #fdf9c1;
+}
+.sliderItem:nth-child(5) .sliderBg {
+  background-color: #f7c1ac;
+}
+.sliderItem:nth-child(6) .sliderBg {
+  background-color: #ffeece;
+}
 
-  .size {
-    padding: 5px 20px;
-    border: 1px solid black;
-    margin-right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-  }
+/* For text color */
+.sliderItem:nth-child(1) .sliderPrice {
+  color: #baf0ff;
+}
+.sliderItem:nth-child(2) .sliderPrice {
+  color: #bcf7d4;
+}
+.sliderItem:nth-child(3) .sliderPrice {
+  color: #f4c6ff;
+}
+.sliderItem:nth-child(4) .sliderPrice {
+  color: #fdf9c1;
+}
+.sliderItem:nth-child(5) .sliderPrice {
+  color: #f7c1ac;
+}
+.sliderItem:nth-child(6) .sliderPrice {
+  color: #ffeece;
+}
 
-  .productButton {
-    float: right;
-    padding: 10px 20px;
-    background-color: black;
-    color: white;
-    font-weight: 600;
-    cursor: pointer;
-  }
+.features {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+}
 
-  .productButton:hover {
-    background-color: white;
-    color: black;
-  }
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
-  .selected {
-    border: 3px solid #313538;
-  }
-  /* .lato-thin {
-      font-family: "Lato", sans-serif;
-      font-weight: 100;
-      font-style: normal;
-    }
-    
-    .lato-light {
-      font-family: "Lato", sans-serif;
-      font-weight: 300;
-      font-style: normal;
-    }
-    
-    .lato-regular {
-      font-family: "Lato", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-    }
-    
-    .lato-bold {
-      font-family: "Lato", sans-serif;
-      font-weight: 700;
-      font-style: normal;
-    }
-    
-    .lato-black {
-      font-family: "Lato", sans-serif;
-      font-weight: 900;
-      font-style: normal;
-    }
-    
-    .lato-thin-italic {
-      font-family: "Lato", sans-serif;
-      font-weight: 100;
-      font-style: italic;
-    }
-    
-    .lato-light-italic {
-      font-family: "Lato", sans-serif;
-      font-weight: 300;
-      font-style: italic;
-    }
-    
-    .lato-regular-italic {
-      font-family: "Lato", sans-serif;
-      font-weight: 400;
-      font-style: italic;
-    }
-    
-    .lato-bold-italic {
-      font-family: "Lato", sans-serif;
-      font-weight: 700;
-      font-style: italic;
-    }
-    
-    .lato-black-italic {
-      font-family: "Lato", sans-serif;
-      font-weight: 900;
-      font-style: italic;
-    } */
-    
+.featureIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.featureTitle {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 20px;
+}
+
+.featureDesc {
+  color: gray;
+  width: 75%;
+  height: 100px;
+  /* border: 1px solid red; */
+}
+
+.product {
+  height: 100vh;
+  background-color: rgb(252, 234, 234);
+  /* background-color: whitesmoke; */
+  position: relative;
+  clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+}
+
+.productImg {
+  width: 50%;
+}
+
+.productDetails {
+  position: absolute;
+  top: 10%;
+  right: 0;
+  width: 40%;
+  padding: 50px;
+}
+
+.productTitle {
+  font-size: 75px;
+  font-weight: 900;
+}
+
+.productDesc {
+  font-size: 24px;
+  color: gray;
+}
+
+.colors, .sizes {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.color {
+  width: 32px;
+  height: 32px;
+  border-radius: 5px;
+  background-color: black;
+  margin: 0 10px;
+  cursor: pointer;
+  border: 1px solid whitesmoke;
+}
+
+.color:last-child {
+  background-color: #1b2843;
+}
+
+.size {
+  padding: 5px 20px;
+  border: 1px solid black;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.productButton {
+  float: right;
+  padding: 10px 20px;
+  background-color: black;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.productButton:hover {
+  background-color: white;
+  color: black;
+}
+
+.selected {
+  border: 3px solid #313538;
+}
+
+.payment {
+  width: 500px;
+  height: 500px;
+  background-color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding: 10px 50px;
+  display: none;
+  flex-direction: column;
+  box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+}
+
+.payTitle {
+  font-size: 20px;
+  color: lightgray;
+}
+
+label {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.payInput {
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 1px solid gray;
+}
+
+.payInput::placeholder {
+  color: rgb(163,163,163);
+}
+
+.cardIcons {
+  display: flex;
+}
+
+.cardIcon {
+  margin-right: 10px;
+}
+
+.cardInfo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sm {
+  width: 30%;
+}
+
+.payButton {
+  position: absolute;
+  height: 40px;
+  bottom: -40px;
+  width: 100%;
+  left: 0;
+  box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 9px 14px 33px -1px rgba(0,0,0,0.75);
+  background-color: #41b782;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.close {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: gray;
+  color: whitesmoke;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 2px;
+
+}
