--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -29,6 +29,7 @@ nav {
 }
 
 .searchInput {
+  color: whitesmoke;
   border: none;
   background-color: transparent;
 }
@@ -363,5 +364,57 @@ label {
   justify-content: center;
   cursor: pointer;
   padding: 2px;
+}
 
+.logoTitle {
+  width: 65px;
+  padding-bottom: 5px;
+}
+
+.gallery {
+  padding: 50px;
+  display: flex;
+}
+
+.galleryItem {
+  flex: 1;
+  padding: 50px;
+}
+
+.galleryImg {
+  width: 100%;
+}
+
+.newSeason {
+  display: flex;
+}
+
+.nsItem {
+  flex: 1;
+  background-color: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.nsImg {
+  width: 100%;
+  height: 500px;
+}
+
+.nsTitle {
+  font-size: 40px;
+}
+
+.nsButton {
+  cursor: pointer;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.nsTitleSm {
+  text-transform: uppercase;
 }
